--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 # Enterprise architect
 *.ldb
 
+# Visual Studio (Code) env files
+.vs
+appsettings.Development.json
+appsettings.json
+
+
+# Output directories
+bin
+obj
+
