--- a/project/deployment/docker-compose.yml
+++ b/project/deployment/docker-compose.yml
@@ -16,5 +16,6 @@ services:
     volumes: 
       - 
     environment: 
+      POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
-
+      POSTGRES_DB: micrm
