--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/appsettings.json
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"ApplicationDbContext": "Host=192.168.1.1;Database=micrm_db;Username=admin;Password=admin"
+	}
 }
