--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/MusicInstrumentsCrm.csproj
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/MusicInstrumentsCrm.csproj
@@ -20,6 +20,8 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
