--- a/project/deployment/docker-compose.yml
+++ b/project/deployment/docker-compose.yml
@@ -14,7 +14,9 @@ services:
     ports:
       - "5432"
     volumes: 
-      - 
+      - volumes/var/lib/postgresql:/var/lib/postgresql
+      - volumes/var/log/postgresql:/var/log/postgresql
+      - volumes/etc/postgresql:/etc/postgresql
     environment: 
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
