--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/ClientApp/tsconfig.json
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/ClientApp/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+	"lib": [
+		"dom",
+		"dom.iterable",
+		"esnext"
+	],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -20,6 +20,6 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src/**"
   ]
 }
