--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 bin
 obj
 dist
+.idea
 
 # There is exist another .gitifnore file
 # Path: project\MusicInstrumentsCrm\MusicInstrumentsCrm\ClientApp\.gitignore
