--- a/project/deployment/docker-compose.yml
+++ b/project/deployment/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
   app:
     container_name: micrm_web
-    build: ../MusicInstrumentsCrm/docker/Dockerfile
+    build: ../MusicInstrumentsCrm/MusicInstrumentsCrm/Docker/Dockerfile
     depends_on: 
       - db 
 
@@ -20,4 +20,4 @@ services:
     environment: 
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
-      POSTGRES_DB: micrm
+      POSTGRES_DB: micrm_db
