--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 
 # There is exist another .gitifnore file
 # Path: project\MusicInstrumentsCrm\MusicInstrumentsCrm\ClientApp\.gitignore
+
+#This is mac
+
+**/.DS_Store/*
