[-] Fixing queries to database, foreign keys returns nulls

--- a/project/MusicInstrumentsCrm/MusicInstrumentsDb/Dockerfile
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsDb/Dockerfile
@@ -12,6 +12,10 @@ COPY ./src/main/sql/schema.sql /sql-data
 COPY ./init-db.sh /docker-entrypoint-initdb.d
 
 FROM library/postgres:11.5 AS init
+ENV POSTGRES_USER admin
+ENV POSTGRES_PASSWORD admin
+ENV POSTGRES_DB micrm_db
+
 WORKDIR /docker-entrypoint-initdb.d
 COPY ./src/main/sql/init /sql-data-init
 COPY --from=clear /docker-entrypoint-initdb.d .
