--- a/project/MusicInstrumentsCrm/MusicInstrumentsDb/Dockerfile
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsDb/Dockerfile
@@ -8,7 +8,7 @@ RUN mkdir /sql-data && \
 	mkdir /sql-data-init && \
 	mkdir /sql-data-save
 	
-COPY ./src/main/sql/schema.sql /sql-data
+COPY ./src/main/sql/tables /sql-data
 COPY ./init-db.sh /docker-entrypoint-initdb.d
 
 FROM library/postgres:11.5 AS init
