[#18] Add authorization (remove custom Role, RolePermission, Permission, migrate to .NET Core 3.0, include Identity auth, start using migrate)

--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/appsettings.json
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/appsettings.json
@@ -4,7 +4,14 @@
       "Default": "Warning"
     }
   },
-	"AllowedHosts": "*",
-	"ConnectionStrings": {
-	}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+  },
+  "IdentityServer": {
+    "Clients": {
+      "MicrmAuthTesting": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
+  }
 }
