--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/ClientApp/package.json
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/ClientApp/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
@@ -34,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.1.2"
   }
 }
