--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/MusicInstrumentsCrm.csproj
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/MusicInstrumentsCrm.csproj
@@ -7,6 +7,7 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+    <IdentityUIFrameworkVersion>Bootstrap4</IdentityUIFrameworkVersion>
   </PropertyGroup>
 
   <ItemGroup>
