--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrmTests/MusicInstrumentsCrmTests.csproj
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrmTests/MusicInstrumentsCrmTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="12.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
