--- a/project/MusicInstrumentsCrm/MusicInstrumentsCrm/appsettings.json
+++ b/project/MusicInstrumentsCrm/MusicInstrumentsCrm/appsettings.json
@@ -9,9 +9,12 @@
   },
   "IdentityServer": {
     "Clients": {
-      "MicrmAuthTesting": {
+      "MicrmInstrumentsCrm": {
         "Profile": "IdentityServerSPA"
       }
+    },
+    "Key": {
+      "Type": "Development"
     }
   }
 }
